index.html and main.css modifications

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
     <body>
-      <div class="divTop">
+      <header class="divTop">
           <div class="text">
             <h1>10,000+ of our users love our products.</h1>
             <p>We only provide great products combined with excellent customer service.
@@ -59,9 +59,9 @@
                 <p>Rated 5 Stars in BestTech</p>
               </div>
           </div>
-      </div>
+      </header>
 
-      <div class="divBottom">
+      <main class="divBottom">
 
           <div class="colton">
               <div class="cardnamePicture">
@@ -105,15 +105,15 @@
                 standard. Will definitely use them again and recommend them to everyone!"</p>
               </div>
           </div>
-        </div>
+        </main>
 
 
 
-      <div class="attribution">
-        Challenge by
+      <footer class="attribution">
+        <p>Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-          Frontend Mentor</a>
+          Frontend Mentor</a></p>
         <p>Coded by <a href="#">Daniel Lamberti</a>.</p>
-      </div>
+      </footer>
     </body>
 </html>
